--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,280 +1,58 @@
 @media screen,print {
-	/* CHARTS */
-	.bigChart {
-		width: 860px;
-		height: 300px;
+
+	.reportContent {
+		padding-top: 10px;
+		margin-left: 350px;
 	}
 
-	.bulletChart {
-		height: 60px;
-		width: 556px;
+	/* The side navigation menu */
+	.leftNav {
+		height: 100%;
+		width: 350px;
+		position: fixed;
+		z-index: 1;
+		top: 48;
+		left: 0;
+		background-color: #F2F2F2;
+		padding-top: 10px;
+		overflow: scroll;
+		transition: 0.2s;
 	}
 
-	.tinyChart {
-		height: 150px;
-		width: 300px;
-	}
-
-	.relationChart {
-		width: 556px;
-		height: 300px;
-	}
-
-	.relationChartMid {
-		width: 556px;
-		height: 372px;
-	}
-
-	.relationChartBig {
-		width: 556px;
-		height: 424px;
-	}
-
-
-	/* TABLES */
-	.valueCell {
-		text-align: right;
-		vertical-align: middle;
-	}
-
-	.dense {
-		font-size: 85%;
-	}
-
-	.inline {
-		display: inline-block;
-		vertical-align: top;
-	}
-
-	.dottedBox {
-		border: 1px dashed gray;
-	}
-
-	.fixedHead table {
-		width: 20px;
-		height: 200px;
+	.navItem {
+		margin-left: 5px;
+		margin-right: 5px;
 		overflow: auto;
 	}
 
-	.fixedHead tbody {
-		width: 20px;
-		height: 200px;
-		overflow: auto;
+	.navClose {
+		color: #276696;
+		position: absolute;
+		top: -18px;
+		right: 15px;
+		font-size: 36px;
 	}
 
-	/* MISC */
-
-	.interpretation {
-		width: 100%;
-		height: 150px;
-		list-style: outside;
-		margin-bottom: 30px;
+	.navOpen {
+		color: #276696;
+		position: absolute;
+		top: 30px;
+		left: 5px;
+		font-size: 36px;
 	}
-
-	.interpretationText {
-		margin-bottom: 20px;
-	}
-
-	.headerPart {
-		margin-bottom: 1px !important;
-		margin-top: 20px !important;
-		background-color: #5B92E5 !important;
-		font-size: 20px !important;
-		color: white !important;
-		padding: 5px !important;
-	}
-
-	.headerSection {
-		background-color: #5B92E5 !important;
-		font-size: 16px !important;
-		color: white !important;
-		padding: 5px !important;
-	}
-
-}
-
-@media screen and (max-width: 768px) {
-
-	body {
-		padding-top: 50px;
-		padding-left: 5px;
-		padding-right: 5px;
-	}
-
-
-}
-
-@media screen and (min-width: 769px) {
-
-	body {
-		padding-top: 50px;
-		padding-left: 20px;
-		padding-right: 20px;
-	}
-
-}
-
-@media screen {
-
-	.reviewResult {
-		min-width: 984px;
-	}
-
-	/* MISC */
-	.onlyPrint {
-		display: none !important;
-	}
-
-
-	.mainView {
-		width: 100%;
-	}
-
-
-	/* SIZES */
-	.halfWidth {
-		width: 49%;
-	}
-
-	.fullWidth {
-		width: 100%;
-	}
-
-
-	/* CHART */
-
-
-	/* TABLES */
-	.table tbody>tr>td.vert-align {
-	    vertical-align: middle;
-	}
-	
-	.table-hover tbody tr:hover > td {
-	  cursor: pointer
-	}
-
-	.relationTable {
-		width: calc(100% - 560px);
-		min-height: 300px;
-	}
-
-	.bigRow1 {
-		height: 51px;
-	}
-
-	.bigRow2 {
-		height: 82px;
-	}
-
-	.bigRow3 {
-		height: 123px;
-	}
-
-	.bigRow4 {
-		height: 144px;
-	}
-
 
 	/* GENERAL */
 	.ui-select-multiple.ui-select-bootstrap {
-	    min-height: 34px;        
-	    height: auto;
-	    padding: .3em;
+		min-height: 34px;
+		height: auto;
+		padding: .3em;
 	}
 	.ui-select-toggle { /*Overwrite bootstrap btn alignment*/
 		text-align: left;
 	}
-	
+
 	.minimized {
 		font-size: 90%;
 		width: auto !important;
-	}
-}
-
-
-@media print {
-	/* GENERAL */
-	.reviewResult { /*Delete?*/
-		width: 860px;
-	}
-
-	.no-print, .no-print * {
-		display: none !important;
-	}
-
-	div.reportPart { /* Make it possible to start new "parts" of the report on new page */
-		page-break-after: always;
-	}
-
-	.noBreak { /* Elements with this class will not be spread across pages*/
-		page-break-inside: avoid;
-	}
-
-	.fullWidth {
-		width: 100%;
-	}
-
-
-	/* TABLES */
-	.tablePrint {
-		width: 100%;
-		border: 1px solid darkgray !important;
-		margin-bottom: 20px;
-		line-height: 90%;
-		font-size: 11px;
-	}
-
-	.tablePrint th {
-		background-color: white !important;
-		border: 1px solid darkgray !important;
-		padding: 3px;
-	}
-
-	.tablePrint td {
-		border: 1px solid darkgray !important;
-		padding: 3px;
-		vertical-align: top;
-	}
-	
-	.relationTable {
-		width: 300px;
-		min-height: 300px;
-	}
-
-
-	.bigRow1 {
-		height: 86px;
-	}
-
-	.bigRow2 {
-		height: 117px;
-	}
-
-	.bigRow3 {
-		height: 143px;
-	}
-
-	.bigRow4 {
-		height: 169px;
-	}
-
-}
-
-@page {
-	/* A4 */
-	size: A4;
-	margin: 15mm 15mm 15mm 15mm;
-}
-
-
-@page:right{
-	@bottom-right {
-		content: counter(page);
-	}
-}
-
-@page:left{
-	@bottom-left {
-		content: counter(page);
 	}
 }
