--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,7 +19,23 @@
 		content: '\25BC';
 	}
 
-	/* The side navigation menu */
+	/* The right side navigation menu */
+	.rightNav {
+		height: 100%;
+		width: 0%;
+		position: fixed;
+		z-index: 1;
+		top: 0;
+		right: 0;
+		background-color: #F2F2F2;
+		padding-top: 58px;
+		padding-bottom: 20px;
+		overflow: auto;
+		transition: 0.5s;
+	}
+
+
+	/* The left side navigation menu */
 	.leftNav {
 		height: 100%;
 		width: 350px;
@@ -40,20 +56,12 @@
 		overflow: visible;
 	}
 
-	.navClose {
+	.navIcon {
+		top: 55px;
+		text-decoration: none;
 		color: #276696;
 		position: absolute;
-		top: 40px;
-		right: 15px;
-		font-size: 36px;
-	}
-
-	.navOpen {
-		color: #276696;
-		position: absolute;
-		top: 40px;
-		left: 5px;
-		font-size: 36px;
+		font-size: 20px;
 	}
 
 	/* GENERAL */
