--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,11 +3,60 @@
 <html >
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Stylesheets related to the menu -->
+    <link type="text/css" rel="stylesheet" href="../dhis-web-commons/font-awesome/css/font-awesome.min.css"/>
+    <link type="text/css" rel="stylesheet" media="screen" href="../dhis-web-commons/css/menu.css">
+    <link href="../dhis-web-commons/fonts/roboto.css" rel="stylesheet" type="text/css">
+    <link href="../dhis-web-commons/material-design-icons/material-icons.css" rel="stylesheet" type="text/css">
+	
 </head>
 
 <body>
+	<!-- Scripts and styling to load dhis2 menu bar -->
+    <style>
+        html {
+            font-size: 14px;
+        }
+
+        #header * {
+            font-family: 'Roboto';
+        }
+    </style>
+	<script type="text/javascript" src="../dhis-web-commons/javascripts/jQuery/jquery.min.js"></script>
+    <script type="text/javascript" src="../dhis-web-core-resource/react-15/react-15.min.js"></script>
+    <script type="text/javascript" src="../dhis-web-core-resource/rxjs/4.1.0/rx.lite.min.js"></script>
+    <script type="text/javascript" src="../dhis-web-core-resource/lodash/4.15.0/lodash.min.js"></script>
+    <script type="text/javascript" src="../dhis-web-core-resource/lodash-functional/lodash-functional.js"></script>
+    <script type="text/javascript" src="../dhis-web-commons/javascripts/header-bar/babel-polyfill.js"></script>
+    <script type="text/javascript" src="../dhis-web-commons/javascripts/header-bar/header-bar.js"></script>
+    
+    <script>
+    	
+        // Needs to be wrapped in jQuery to be sure the DOM is parsed as the script is not at the bottom.
+        jQuery(function () {
+            try {
+                if ('Dhis2HeaderBar' in window) {
+                    Dhis2HeaderBar.initHeaderBar(document.querySelector('#header'), 
+                    	undefined, 
+                    	{noLoadingIndicator: true}
+                    );
+                }
+            } catch (e) {
+                if ('console' in window ) {
+                    console.error(e);
+                }
+            }
+        });
+        
+    </script>
+        
+        
+<div id="header"></div>
+
 <div class="mainView">
 	<div ng-view style="margin-top: 48px"></div>
 </div>
+
 </body>
 </html>
