--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Stylesheets related to the menu -->
+    <!-- Stylesheets related to the dhis2 menu bar-->
     <link type="text/css" rel="stylesheet" href="../../../dhis-web-commons/font-awesome/css/font-awesome.min.css"/>
     <link type="text/css" rel="stylesheet" media="screen" href="../../../dhis-web-commons/css/menu.css">
     <link href="../../../dhis-web-commons/fonts/roboto.css" rel="stylesheet" type="text/css">
