--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,16 @@
+.download-button { 
+	/* no need for printing the download button so hide it by default and show it for screens below */
+	display: none; 
+}
+
+@media screen {
+	.download-button { 
+		display: block; 
+		float: right;
+		margin-bottom: 20px;
+	}
+}
+
 @media screen,print {
 
 	.reportContent {
@@ -82,5 +95,7 @@
 		font-size: 90%;
 		width: auto !important;
 	}
+
+
 
 }
