feat: make use of stronger colors in performance chart/tables

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -105,3 +105,18 @@
 
 
 }
+
+
+/* these should match colors.js */
+.success { /*green*/
+	background-color: rgba(35,255,35,0.3) !important;
+}
+.info { /*blue*/
+	background-color: rgba(150,200,255, 0.6)  !important;
+}
+.warning { /*yellow*/
+	background-color: rgba(255,255,80,0.5)  !important;
+}
+.danger { /*red*/
+	background-color: rgba(255,35,35,0.5)  !important;
+}
