--- a/src/css/style.css
+++ b/src/css/style.css
@@ -105,3 +105,18 @@
 
 
 }
+
+
+/* these should match colors.js */
+.success { /*dark green*/
+	background-color: rgba(0,120,0,0.3) !important;
+}
+.info { /*light green*/
+	background-color: rgba(120,255,120,0.3)  !important;
+}
+.warning { /*yellow*/
+	background-color: rgba(255,255,80,0.5)  !important;
+}
+.danger { /*red*/
+	background-color: rgba(255,35,35,0.5)  !important;
+}
