fix: hide header bar
Hide header bar when not in standalone mode

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -22,7 +22,7 @@
 <div id="header"></div>
 
 <div class="mainView">
-	<div ng-view style="margin-top: 48px"></div>
+	<div ng-view></div>
 </div>
 
 </body>
